# selfsupervised_safetycritical

./: README.md
camArray_on_jetson/: CMakeLists.txt  package.xml
camArray_on_jetson/include/: calibration.h  main.h
camArray_on_jetson/src/: commander.py  videoReader.cpp
uncertainty_estimator/: CMakeLists.txt  package.xml
uncertainty_estimator/include/: cam_array.h  cbf.h  pcl_opencv_bridge.h  uncertainty_predictor.h
uncertainty_estimator/include/elas/: elas_opencv_bridge.h
uncertainty_estimator/launch/: main.launch
uncertainty_estimator/msg/: quadruped_cmd.msg
uncertainty_estimator/src/: image_receiver.cpp
uncertainty_estimator/src/elas/: elas_opencv_bridge.cpp  filter.cpp
uncertainty_estimator/tests/: CMakeLists.txt  test_load_model.cpp  test_uncertainty_predictor.cpp
uncertaintyestimator_on_laptop/: CMakeLists.txt
uncertaintyestimator_on_laptop/include/: cam_array.h  cbf.h  pointclouds.h  torch_utils.h
uncertaintyestimator_on_laptop/msg/: triple_image.msg
uncertaintyestimator_on_laptop/py_utils/: mpac_cmd.py
uncertaintyestimator_on_laptop/src/: commander.py  monitor.cpp
uncertaintyestimator_on_laptop/src/elas/: descriptor.cpp  matrix.cpp  triangle.cpp
